added height and bmi at profile page ui

--- a/app/src/main/res/layout/fragment_forgot_password_page.xml
+++ b/app/src/main/res/layout/fragment_forgot_password_page.xml
@@ -67,8 +67,8 @@
         android:layout_below="@id/emailTitle"
         android:background="@drawable/white_field"
         android:ems="10"
-        android:inputType="textPassword"
-        android:hint="Password"
+        android:inputType="textEmailAddress"
+        android:hint="Email"
         android:textColorHint="@color/pastel_red"
         android:drawablePadding="20dp"
         android:minHeight="48dp"
