--- a/app/src/main/res/layout/fragment_profile_page.xml
+++ b/app/src/main/res/layout/fragment_profile_page.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:fillViewport="true"
 
     tools:context=".profilePage">
+
+    <RelativeLayout
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
 
     <TextView
         android:id="@+id/profileTitle"
@@ -14,7 +21,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="35dp"
         android:layout_marginBottom="50dp"
@@ -59,14 +66,14 @@
         android:layout_height="50dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="52dp"
-        android:layout_marginEnd="15dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="30dp"
         android:backgroundTint="@color/white"
         android:drawableEnd="@drawable/ic_baseline_black_logout_24"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
-        android:id="@+id/name"
+        android:id="@+id/username"
         android:layout_width="247dp"
         android:layout_height="40dp"
         android:layout_alignParentStart="true"
@@ -75,7 +82,7 @@
         android:layout_marginTop="20dp"
         android:fontFamily="@font/poppins_semibold"
         android:gravity="left"
-        android:text="Sarah Alexander"
+        android:text="sarah meow meow"
         android:textColor="@color/black"
         android:textSize="18sp"
         />
@@ -84,11 +91,11 @@
         android:id="@+id/userBio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/name"
+        android:layout_below="@id/username"
         android:layout_alignParentStart="true"
         android:layout_marginStart="30dp"
         android:layout_marginBottom="50dp"
-        android:fontFamily="@font/poppins"
+        android:fontFamily="@font/poppins_medium"
         android:gravity="left"
         android:text="A girl who likes to travel and eat."
         android:textSize="14dp" />
@@ -127,70 +134,137 @@
         android:textColor="@color/white"
         />
 
-    <TextView
-        android:id="@+id/currentWeightText"
-        android:layout_width="247dp"
-        android:layout_height="40dp"
-        android:layout_alignParentStart="true"
-        android:layout_below="@id/gotoAchievementsPageButton"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/poppins_semibold"
-        android:gravity="left"
-        android:text="Current Weight"
-        android:textSize="18sp"
-        />
+
+        <TextView
+            android:id="@+id/currentWeightText"
+            android:layout_below="@id/gotoAchievementsPageButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/poppins_semibold"
+            android:text="Current Weight"
+            android:textSize="18sp" />
 
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="132dp"
+        android:layout_height="wrap_content"
         android:layout_below="@id/currentWeightText"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:background="@drawable/rectangle"
-        android:orientation="horizontal">
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/currentWeight"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/currentWeightText"
-            android:layout_marginStart="100dp"
-            android:layout_marginTop="25dp"
-            android:fontFamily="@font/poppins_semibold"
-            android:gravity="left"
-            android:text="67"
-            android:textColor="@color/pastel_red"
-            android:textSize="50sp" />
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/kgText"
-            android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/weightText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:padding="10dp"
+                    android:text="Weight (kg)"
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/userWeight"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:padding="10dp"
+                    android:text="67"
+                    android:textColor="@color/pastel_red"
+                    android:textSize="22sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/heightText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:textSize="18sp"
+                    android:padding="10dp"
+                    android:textColor="@color/black"
+                    android:text="Height (cm)" />
+
+                <TextView
+                    android:id="@+id/userHeight"
+                    android:padding="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:textSize="22sp"
+                    android:textColor="@color/pastel_red"
+                    android:text="160"/>
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignRight="@id/currentWeight"
-            android:layout_marginLeft="20dp"
-            android:fontFamily="@font/poppins"
-            android:gravity="left"
-            android:text="Kg"
-            android:textColor="@color/black"
-            android:textSize="20sp" />
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/bmiText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:fontFamily="@font/poppins_semibold"
+                android:textSize="18sp"
+                android:padding="10dp"
+                android:textColor="@color/black"
+                android:text="Body Mass Index (BMI)" />
+
+            <TextView
+                android:id="@+id/userBMI"
+                android:padding="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:fontFamily="@font/poppins_semibold"
+                android:textSize="22sp"
+                android:textColor="@color/pastel_red"
+                android:text="26.2"/>
+
+        </LinearLayout>
 
         <Button
             android:id="@+id/editProgressButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="right"
-            android:layout_marginLeft="30dp"
             android:backgroundTint="@color/white"
+            android:layout_gravity="center_horizontal"
             android:fontFamily="@font/poppins_semibold"
-            android:layout_marginTop="-20dp"
-            android:drawableLeft="@drawable/ic_baseline_pastel_red_edit_24"
-            android:text="Edit"
+            android:layout_marginTop="10dp"
+            android:drawableRight="@drawable/ic_baseline_pastel_red_edit_24"
+            android:text="UPDATE PROGRESS"
             android:textColor="@color/pastel_red"
             android:textSize="14sp"
             />
-
     </LinearLayout>
 
+
 </RelativeLayout>
+</ScrollView>
