--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -110,6 +110,9 @@
         <action
             android:id="@+id/action_homePage_to_socialFeedPage"
             app:destination="@id/socialFeedPage" />
+        <action
+            android:id="@+id/action_homePage_to_foodDetailsPage"
+            app:destination="@id/foodDetailsPage" />
     </fragment>
     <fragment
         android:id="@+id/allRecipesPage"
@@ -119,6 +122,9 @@
         <action
             android:id="@+id/action_allRecipesPage_to_homePage"
             app:destination="@id/homePage" />
+        <action
+            android:id="@+id/action_allRecipesPage_to_foodDetailsPage"
+            app:destination="@id/foodDetailsPage" />
     </fragment>
     <fragment
         android:id="@+id/calorieCounterPage"
@@ -153,18 +159,6 @@
             app:destination="@id/profilePage" />
     </fragment>
     <fragment
-        android:id="@+id/recipeDetailsPage"
-        android:name="com.example.bitbybit.frenchToastRecipePage"
-        android:label="fragment_recipe_details_page"
-        tools:layout="@layout/fragment_frech_toast_recipe_details_page" >
-        <action
-            android:id="@+id/action_recipeDetailsPage_to_homePage"
-            app:destination="@id/homePage" />
-        <action
-            android:id="@+id/action_recipeDetailsPage_to_recipeSteps2"
-            app:destination="@id/recipeSteps" />
-    </fragment>
-    <fragment
         android:id="@+id/savedRecipesPage"
         android:name="com.example.bitbybit.savedRecipesPage"
         android:label="fragment_saved_recipes"
@@ -191,15 +185,6 @@
             app:destination="@id/profilePage" />
     </fragment>
     <fragment
-        android:id="@+id/recipeSteps"
-        android:name="com.example.bitbybit.tunaPastaRecipePage"
-        android:label="fragment_recipe_steps"
-        tools:layout="@layout/fragment_tuna_pasta_recipe_steps" >
-        <action
-            android:id="@+id/action_recipeSteps_to_recipeDetailsPage"
-            app:destination="@id/recipeDetailsPage" />
-    </fragment>
-    <fragment
         android:id="@+id/achievementsPage"
         android:name="com.example.bitbybit.achievementsPage"
         android:label="fragment_achievements_page"
@@ -208,21 +193,6 @@
             android:id="@+id/action_achievementsPage_to_profilePage"
             app:destination="@id/profilePage" />
     </fragment>
-    <fragment
-        android:id="@+id/frenchToastDetailsPage"
-        android:name="com.example.bitbybit.frenchToastDetailsPage"
-        android:label="fragment_french_toast_details_page"
-        tools:layout="@layout/fragment_french_toast_details_page" />
-    <fragment
-        android:id="@+id/frenchToastIngredientsPage"
-        android:name="com.example.bitbybit.frenchToastIngredientsPage"
-        android:label="fragment_french_toast_ingredients_page"
-        tools:layout="@layout/fragment_french_toast_ingredients_page" />
-    <fragment
-        android:id="@+id/frenchToastStepsPage"
-        android:name="com.example.bitbybit.frenchToastStepsPage"
-        android:label="fragment_french_toast_steps_page"
-        tools:layout="@layout/fragment_french_toast_steps_page" />
     <fragment
         android:id="@+id/updateAchievementsPage"
         android:name="com.example.bitbybit.updateAchievementsPage"
@@ -265,18 +235,36 @@
             app:destination="@id/adminHomePage" />
     </fragment>
     <fragment
-        android:id="@+id/tunaPastaDetailsPage"
-        android:name="com.example.bitbybit.tunaPastaDetailsPage"
-        android:label="fragment_tuna_pasta_details_page"
-        tools:layout="@layout/fragment_tuna_pasta_details_page" />
+        android:id="@+id/foodDetailsPage"
+        android:name="com.example.bitbybit.foodDetailsPage"
+        android:label="fragment_food_details_page2"
+        tools:layout="@layout/fragment_food_details_page2" >
+        <action
+            android:id="@+id/action_foodDetailsPage_to_foodIngredientPage2"
+            app:destination="@id/foodIngredientPage2" />
+        <action
+            android:id="@+id/action_foodDetailsPage_to_homePage"
+            app:destination="@id/homePage" />
+    </fragment>
     <fragment
-        android:id="@+id/tunaPastaIngredientsPage"
-        android:name="com.example.bitbybit.tunaPastaIngredientsPage"
-        android:label="fragment_tuna_pasta_ingredients_page"
-        tools:layout="@layout/fragment_tuna_pasta_ingredients_page" />
+        android:id="@+id/foodStepsPage"
+        android:name="com.example.bitbybit.foodStepsPage"
+        android:label="fragment_food_steps_page2"
+        tools:layout="@layout/fragment_food_steps_page2" >
+        <action
+            android:id="@+id/action_foodStepsPage_to_foodIngredientPage2"
+            app:destination="@id/foodIngredientPage2" />
+    </fragment>
     <fragment
-        android:id="@+id/tunaPastaStepsPage"
-        android:name="com.example.bitbybit.tunaPastaStepsPage"
-        android:label="fragment_tuna_pasta_steps_page"
-        tools:layout="@layout/fragment_tuna_pasta_steps_page" />
+        android:id="@+id/foodIngredientPage2"
+        android:name="com.example.bitbybit.foodIngredientPage"
+        android:label="fragment_food_ingredient_page"
+        tools:layout="@layout/fragment_food_ingredient_page" >
+        <action
+            android:id="@+id/action_foodIngredientPage2_to_foodStepsPage"
+            app:destination="@id/foodStepsPage" />
+        <action
+            android:id="@+id/action_foodIngredientPage2_to_foodDetailsPage"
+            app:destination="@id/foodDetailsPage" />
+    </fragment>
 </navigation>
