--- a/app/src/main/res/layout/fragment_admin_post_page.xml
+++ b/app/src/main/res/layout/fragment_admin_post_page.xml
@@ -9,18 +9,6 @@
     tools:context=".adminPostPage">
 
 
-    <!--    <de.hdodenhof.circleimageview.CircleImageView-->
-<!--        android:id="@+id/profileImage"-->
-<!--        android:layout_width="96dp"-->
-<!--        android:layout_height="96dp"-->
-<!--        android:src="@color/pastel_red"-->
-<!--        app:civ_border_color="#FF000000"-->
-<!--        app:civ_border_width="1dp"-->
-<!--        android:layout_alignParentStart="true"-->
-<!--        android:layout_below="@id/postTitle"-->
-<!--        android:layout_marginStart="260dp"-->
-<!--        android:layout_marginTop="-25dp"-->
-<!--        />-->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -76,9 +64,8 @@
 
         <EditText
             android:id="@+id/postTitleName"
-            android:layout_width="270dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
             android:layout_marginTop="20dp"
             android:hint="Title"
             android:fontFamily="@font/poppins_medium"
@@ -91,9 +78,7 @@
             android:id="@+id/postDescription"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:layout_marginStart="30dp"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="50dp"
             android:background="@drawable/rectangle"
             android:fontFamily="@font/poppins_medium"
             android:hint="Post Description"
@@ -104,8 +89,8 @@
             android:id="@+id/uploadPicturesText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginStart="10dp"
             android:fontFamily="@font/poppins_semibold"
             android:text="Upload Pictures (optional)"
             android:textColor="@color/black"
@@ -115,9 +100,8 @@
             android:id="@+id/choosePictureButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="50dp"
+            android:layout_marginStart="10dp"
             android:backgroundTint="@color/white"
             android:drawableEnd="@drawable/ic_baseline_pastelred_arrow_forward_ios_24"
             android:fontFamily="@font/poppins_semibold"
