--- a/app/src/main/res/layout/fragment_customer_support_page.xml
+++ b/app/src/main/res/layout/fragment_customer_support_page.xml
@@ -5,172 +5,132 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".customerSupportPage"
+    android:id="@+id/relativeLayoutReportPage"
     >
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_margin="30dp">
+
+        <TextView
+            android:id="@+id/customerSupportTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="50dp"
+            android:fontFamily="@font/poppins_semibold"
+            android:gravity="left"
+            android:text="Submit Report"
+            android:textSize="20sp" />
+
+        <ImageView
+            android:id="@+id/customerSupportView"
+            android:layout_below="@id/customerSupportTitle"
+            android:layout_width="200dp"
+            android:layout_height="150dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/ic_customer_support" />
+
+        <TextView
+            android:id="@+id/nameTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/customerSupportView"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/poppins_semibold"
+            android:gravity="left"
+            android:text="Name"
+            android:textSize="16sp" />
+
+        <EditText
+            android:id="@+id/name"
+            android:layout_width="354dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/nameTitle"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/white_field"
+            android:drawablePadding="20dp"
+            android:hint="Name"
+            android:minHeight="48dp"
+            android:padding="10dp"
+            android:textColorHint="@color/pastel_red"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/emailTitle"
+            android:layout_width="wrap_content"
+            android:layout_below="@id/name"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/poppins_semibold"
+            android:gravity="left"
+            android:text="Email"
+            android:textSize="16sp" />
+
+        <EditText
+            android:id="@+id/email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/emailTitle"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/white_field"
+            android:drawablePadding="20dp"
+            android:hint="Email"
+            android:padding="10dp"
+            android:inputType="textEmailAddress"
+            android:textColorHint="@color/pastel_red"
+            android:textSize="16sp" />
+
+
+        <TextView
+            android:id="@+id/problemTitle"
+            android:layout_width="wrap_content"
+            android:layout_below="@id/email"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/poppins_semibold"
+            android:gravity="left"
+            android:text="Problem Description"
+            android:textSize="16sp" />
+
+        <EditText
+            android:id="@+id/problemDescription"
+            android:layout_width="351dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/problemTitle"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/white_field"
+            android:drawablePadding="20dp"
+            android:hint="Describe your problem here."
+            android:minHeight="48dp"
+            android:padding="10dp"
+            android:textColorHint="@color/pastel_red"
+            android:textSize="16sp" />
+
+        <Button
+            android:id="@+id/submitReportButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/problemDescription"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="30dp"
+            android:backgroundTint="@color/pastel_red"
+            android:fontFamily="@font/poppins_semibold"
+            android:text="SUBMIT"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            android:layout_marginBottom="30dp"/>
 
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/customerSupportTitle"
-        android:layout_width="220dp"
-        android:layout_height="40dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginRight="35dp"
-        android:layout_marginBottom="50dp"
-        android:fontFamily="@font/poppins_semibold"
-        android:gravity="left"
-        android:text="Customer Support"
-        android:textSize="20sp" />
-
-    <ImageView
-        android:id="@+id/customerSupportView"
-        android:layout_below="@id/customerSupportTitle"
-        android:layout_width="171dp"
-        android:layout_height="131dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="-40dp"
-        android:src="@drawable/ic_customer_support" />
-
-    <TextView
-        android:id="@+id/nameTitle"
-        android:layout_width="150dp"
-        android:layout_height="40dp"
-        android:layout_below="@id/customerSupportView"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="50dp"
-        android:fontFamily="@font/poppins_semibold"
-        android:gravity="left"
-        android:text="Name"
-        android:textSize="16sp" />
-
-    <EditText
-        android:id="@+id/name"
-        android:layout_width="354dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/nameTitle"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="-60dp"
-        android:background="@drawable/white_field"
-        android:drawablePadding="20dp"
-        android:hint="Name"
-        android:minHeight="48dp"
-        android:padding="10dp"
-        android:textColorHint="@color/pastel_red"
-        android:textSize="16sp" />
-
-    <TextView
-        android:id="@+id/emailTitle"
-        android:layout_width="150dp"
-        android:layout_below="@id/name"
-
-        android:layout_height="40dp"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="35dp"
-        android:fontFamily="@font/poppins_semibold"
-        android:gravity="left"
-        android:text="Email"
-        android:textSize="16sp" />
-
-    <EditText
-        android:id="@+id/email"
-        android:layout_width="352dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/emailTitle"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="-10dp"
-        android:background="@drawable/white_field"
-        android:drawablePadding="20dp"
-        android:hint="Email"
-        android:padding="10dp"
-        android:textColorHint="@color/pastel_red"
-        android:textSize="16sp" />
-
-    <TextView
-        android:id="@+id/contactTitle"
-        android:layout_width="150dp"
-        android:layout_below="@id/email"
-        android:layout_height="40dp"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="50dp"
-        android:fontFamily="@font/poppins_semibold"
-        android:gravity="left"
-        android:text="Contact Number (X)"
-        android:textSize="16sp" />
-
-    <EditText
-        android:id="@+id/contactNumber"
-        android:layout_width="352dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/contactTitle"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="-10dp"
-        android:background="@drawable/white_field"
-        android:drawablePadding="20dp"
-        android:hint="Contact Number"
-        android:minHeight="48dp"
-        android:padding="10dp"
-        android:textColorHint="@color/pastel_red"
-        android:textSize="16sp" />
-
-    <TextView
-        android:id="@+id/problemTitle"
-        android:layout_width="200dp"
-        android:layout_below="@id/contactNumber"
-        android:layout_height="40dp"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="50dp"
-        android:fontFamily="@font/poppins_semibold"
-        android:gravity="left"
-        android:text="Problem Description"
-        android:textSize="16sp" />
-
-    <EditText
-        android:id="@+id/problemDescription"
-        android:layout_width="351dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/problemTitle"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="-60dp"
-        android:background="@drawable/white_field"
-        android:drawablePadding="20dp"
-        android:hint="Describe your problem here."
-        android:minHeight="48dp"
-        android:padding="10dp"
-        android:textColorHint="@color/pastel_red"
-        android:textSize="16sp" />
-
-    <Button
-        android:id="@+id/submitReportButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/problemDescription"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="40dp"
-        android:backgroundTint="@color/pastel_red"
-        android:fontFamily="@font/poppins_semibold"
-        android:text="SUBMIT"
-        android:textColor="@color/white"
-        android:textSize="14sp" />
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/coordinatorLayout"
@@ -183,7 +143,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
         tools:context=".MainActivity">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
