--- a/app/src/main/res/layout/cardviewfoodlistingridient.xml
+++ b/app/src/main/res/layout/cardviewfoodlistingridient.xml
@@ -8,7 +8,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/frIngredient1"
+            android:id="@+id/recipeIngredient"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/rectangle"
@@ -17,7 +17,7 @@
             android:padding="10dp"
             android:text="Honeywheat bread"
             android:textColor="@color/black"
-            android:textSize="15dp">
+            android:textSize="16dp">
 
         </TextView>
 
