--- a/app/src/main/res/layout/fragment_register_page.xml
+++ b/app/src/main/res/layout/fragment_register_page.xml
@@ -86,6 +86,7 @@
         android:background="@drawable/white_field"
         android:drawablePadding="20dp"
         android:hint="Password"
+        android:inputType="textPassword"
         android:minHeight="48dp"
         android:padding="10dp"
         android:textColorHint="@color/pastel_red"
