--- a/app/src/main/res/layout/fragment_calorie_counter_page.xml
+++ b/app/src/main/res/layout/fragment_calorie_counter_page.xml
@@ -10,10 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="40dp"
-        >
+        android:layout_marginBottom="40dp">
 
         <TextView
             android:id="@+id/calorieCounterText"
@@ -38,49 +37,46 @@
             android:gravity="left"
             android:text="Insert new entry"
             android:textColor="@color/pastel_red"
-            android:textSize="18sp"
-            />
+            android:textSize="18sp" />
 
         <LinearLayout
+            android:id="@+id/linearLayoutAdmin6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:id="@+id/linearLayoutAdmin6"
             android:layout_below="@id/calorieCounterDesc"
-            >
+            android:orientation="vertical">
 
             <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="10dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/dateText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:fontFamily="@font/poppins_semibold"
-                android:text="Date"
-                android:textSize="16sp" />
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="10dp"
+                android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/entryDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:fontFamily="@font/poppins"
-                android:ems="10"
-                android:inputType="date"
-                android:hint="date"
-                android:textAlignment="center"
-                android:textColorHint="@color/pastel_red"
-                android:textSize="14sp"
-                />
+                <TextView
+                    android:id="@+id/dateText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:text="Date"
+                    android:textSize="16sp" />
 
-        </LinearLayout>
+                <EditText
+                    android:id="@+id/entryDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:fontFamily="@font/poppins"
+                    android:hint="date"
+                    android:inputType="date"
+                    android:textAlignment="center"
+                    android:textColorHint="@color/pastel_red"
+                    android:textSize="14sp" />
+
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -105,12 +101,12 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:inputType="time"
                     android:fontFamily="@font/poppins"
                     android:hint="time"
+                    android:inputType="time"
                     android:textAlignment="center"
                     android:textColorHint="@color/pastel_red"
-                    android:textSize="14sp"/>
+                    android:textSize="14sp" />
 
             </LinearLayout>
         </LinearLayout>
@@ -126,8 +122,7 @@
             android:gravity="left"
             android:text="Add meals into entry"
             android:textColor="@color/pastel_red"
-            android:textSize="18sp"
-            />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/recipeNameTitle"
@@ -158,8 +153,8 @@
             android:id="@+id/linearLayoutadmin7"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
             android:layout_below="@id/recipeName"
+            android:layout_marginTop="10dp"
             android:orientation="vertical">
 
             <LinearLayout
@@ -293,6 +288,19 @@
             android:textColor="@color/pastel_red"
             android:textSize="12sp" />
 
+        <Button
+            android:id="@+id/cancelButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/linearLayoutadmin7"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="40dp"
+            android:backgroundTint="@color/white"
+            android:fontFamily="@font/poppins_semibold"
+            android:text="CANCEL"
+            android:textColor="@color/pastel_red"
+            android:textSize="12sp" />
 
 
     </RelativeLayout>
