--- a/app/src/main/res/layout/fragment_food_details_page.xml
+++ b/app/src/main/res/layout/fragment_food_details_page.xml
@@ -38,10 +38,9 @@
         android:textColor="@color/black"/>
 
     <LinearLayout
-        android:layout_width="360dp"
-        android:layout_below="@id/frenchToastTitle"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
+        android:layout_below="@id/frenchToastTitle"
         android:orientation="vertical"
 
         >
@@ -73,13 +72,13 @@
                 android:id="@+id/frenchToastRating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:paddingTop="10dp"
                 android:layout_gravity="center_horizontal"
-                android:text="45"
+                android:layout_weight="1"
                 android:fontFamily="@font/poppins_semibold"
-                android:textSize="18sp"
-                android:textColor="@color/black"/>
+                android:paddingTop="10dp"
+                android:text="45"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
         </LinearLayout>
 
     </LinearLayout>
@@ -88,10 +87,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginTop="400dp"
-        >
+        android:layout_marginTop="400dp">
 
         <TextView
             android:id="@+id/frenchToastNutritionalDetails"
@@ -103,8 +99,8 @@
             android:fontFamily="@font/poppins_semibold"
             android:gravity="left"
             android:text="Nutritional Details"
-            android:textSize="16sp"
-            android:textColor="@color/black"  />
+            android:textColor="@color/black"
+            android:textSize="16sp" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -113,106 +109,131 @@
             android:orientation="horizontal">
 
 
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_height="75dp">
 
                 <LinearLayout
+                    android:id="@+id/linearLayout6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="20dp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/frenchToastCaloriesTitle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="33dp"
-                        android:fontFamily="@font/poppins_semibold"
-                        android:text="Calories" />
-
-                    <TextView
-                        android:id="@+id/frenchToastCalories"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/poppins_semibold"
-                        android:text="72 calories"
-                        android:textColor="@color/pastel_red"
-                        android:textSize="16dp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="20dp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/frenchToastCarboTitle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/poppins_semibold"
-                        android:text="Carbohydrate" />
-
-                    <TextView
-                        android:id="@+id/frenchToastCarbo"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/poppins_semibold"
-                        android:text="25g"
-                        android:textColor="@color/pastel_red"
-                        android:textSize="16dp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="20dp"
-                    android:orientation="vertical">
+                    android:layout_marginBottom="14dp"
+                    android:orientation="vertical"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/linearLayout9"
+                    app:layout_constraintStart_toEndOf="@+id/linearLayout7">
 
                     <TextView
                         android:id="@+id/frenchToastProteinTitle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/poppins_semibold"
-                        android:text="Protein" />
+                        android:text="Protein"
+                        android:textAlignment="center" />
 
                     <TextView
                         android:id="@+id/frenchToastProtein"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/poppins_semibold"
                         android:text="8g"
+                        android:textAlignment="center"
                         android:textColor="@color/pastel_red"
                         android:textSize="16dp" />
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/linearLayout9"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="20dp"
-                    android:orientation="vertical">
+                    android:layout_marginBottom="14dp"
+                    android:orientation="vertical"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/linearLayout6">
 
                     <TextView
                         android:id="@+id/frenchToastFatTitle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/poppins_semibold"
-                        android:text="Fat" />
+                        android:text="Fat"
+                        android:textAlignment="center" />
 
                     <TextView
                         android:id="@+id/frenchToastFat"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/poppins_semibold"
                         android:text="11g"
+                        android:textAlignment="center"
                         android:textColor="@color/pastel_red"
                         android:textSize="16dp" />
                 </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/linearLayout8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="14dp"
+                    android:orientation="vertical"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/linearLayout7"
+                    app:layout_constraintStart_toStartOf="parent">
+
+                    <TextView
+                        android:id="@+id/frenchToastCaloriesTitle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins_semibold"
+                        android:text="Calories"
+                        android:textAlignment="center" />
+
+                    <TextView
+                        android:id="@+id/frenchToastCalories"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins_semibold"
+                        android:text="72 kcal"
+                        android:textAlignment="center"
+                        android:textColor="@color/pastel_red"
+                        android:textSize="16dp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/linearLayout7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="14dp"
+                    android:orientation="vertical"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/linearLayout6"
+                    app:layout_constraintStart_toEndOf="@+id/linearLayout8">
+
+                    <TextView
+                        android:id="@+id/frenchToastCarboTitle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins_semibold"
+                        android:text="Carbohydrate"
+                        android:textAlignment="center" />
+
+                    <TextView
+                        android:id="@+id/frenchToastCarbo"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins_semibold"
+                        android:text="25g"
+                        android:textAlignment="center"
+                        android:textColor="@color/pastel_red"
+                        android:textSize="16dp" />
+                </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
             </LinearLayout>
 
@@ -220,11 +241,11 @@
                 android:id="@+id/frenchToastIngredientsPageButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="80dp"
                 android:layout_marginStart="30dp"
+                android:layout_marginTop="80dp"
                 android:layout_marginEnd="30dp"
-                android:text="PREPARE INGREDIENTS"
                 android:fontFamily="@font/poppins_semibold"
+                android:text="PREPARE INGREDIENTS"
                 android:textColor="@color/white"
                 tools:ignore="NotSibling" />
 
@@ -232,4 +253,51 @@
 
 
     </RelativeLayout>
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/coordinatorLayout"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginBottom="0dp"
+        android:foregroundGravity="bottom"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        tools:context=".MainActivity"
+        tools:ignore="UnknownIdInLayout">
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionButton2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/hello_blank_fragment"
+            android:src="@drawable/ic_baseline_white_plus_sign_24"
+
+            app:layout_anchor="@id/bottomAppBar" />
+
+        <com.google.android.material.bottomappbar.BottomAppBar
+            android:id="@+id/bottomAppBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            app:fabCradleMargin="10dp"
+            app:fabCradleRoundedCornerRadius="10dp"
+            app:fabCradleVerticalOffset="10dp">
+
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/bottomNavigationView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="16dp"
+                android:background="@drawable/transparent_background"
+                app:menu="@menu/bottom_nav_menu"
+
+                />
+        </com.google.android.material.bottomappbar.BottomAppBar>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </RelativeLayout>
