--- a/app/src/main/res/layout/fragment_social_feed_page.xml
+++ b/app/src/main/res/layout/fragment_social_feed_page.xml
@@ -11,15 +11,15 @@
         android:id="@+id/backFeedToHomePageButton"
         android:layout_width="116dp"
         android:layout_height="50dp"
-        android:layout_marginStart="292dp"
         android:layout_marginTop="52dp"
+        android:layout_marginEnd="25dp"
         android:backgroundTint="@color/white"
         android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
         android:fontFamily="@font/poppins_semibold"
         android:text="back"
         android:textColor="@color/pastel_red"
         android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -95,7 +95,9 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="569dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/FeedTitleText">
