--- a/app/src/main/res/layout/cardviewfoodlistingridient.xml
+++ b/app/src/main/res/layout/cardviewfoodlistingridient.xml
@@ -8,8 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="5dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp">
+        android:layout_margin = "10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
