--- a/app/src/main/res/layout/cardviewsavedrecipes.xml
+++ b/app/src/main/res/layout/cardviewsavedrecipes.xml
@@ -2,63 +2,72 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="233dp">
+        app:cardCornerRadius="5dp"
+       >
 
-        <ImageButton
-            android:id="@+id/imageSavedRecipes"
-            android:layout_width="374dp"
-            android:layout_height="192dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="62dp"
-            android:background="@drawable/roundcorner"
-            android:clickable="true"
-            android:onClick="clickNew"
-            android:scaleType="fitXY"
-            android:src="@drawable/french_toast">
-
-        </ImageButton>
-
-        <ImageButton
-            android:id="@+id/ButtonDeleteRecipe"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginLeft="335dp"
-            android:layout_marginTop="65dp"
-            android:background="@drawable/roundcorner"
-            android:backgroundTint="#FFFFFF"
-            android:minWidth="48dp"
-            android:minHeight="48dp"
-            android:src="@drawable/ic_baseline_delete_outline_24">
+            android:layout_margin="10dp"
+            android:orientation="vertical">
 
-        </ImageButton>
+            <Button
+                android:id="@+id/ButtonDeleteRecipe"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginEnd="5dp"
+                android:background="@drawable/transparent_background"
+                android:drawableLeft="@drawable/ic_baseline_delete_outline_24"
+                android:backgroundTint="#FFFFFF"
+                >
+
+            </Button>
+
+            <RelativeLayout
+                android:id="@+id/relativeLayoutSavedRecipesPage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:padding="10dp">
+
+                <ImageButton
+                    android:id="@+id/imageSavedRecipes"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:background="@drawable/roundcorner"
+                    android:clickable="true"
+                    android:onClick="clickNew"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/french_toast">
+
+                </ImageButton>
+
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/nameFoodAllRecipe"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:fontFamily="@font/poppins_semibold"
+                android:linksClickable="true"
+                android:padding="10dp"
+                android:text="Low Calorie French Toast"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                >
+
+            </TextView>
+
+        </LinearLayout>
+
     </androidx.cardview.widget.CardView>
 
-    <TextView
-        android:id="@+id/nameFoodAllRecipe"
-        android:layout_width="wrap_content"
-        android:layout_height="28dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="260dp"
-        android:clickable="true"
-        android:fontFamily="@font/poppins_medium"
-        android:linksClickable="true"
-        android:minHeight="48dp"
-        android:text="Low Calorie French Toast"
-        android:textColor="#000000"
-        android:textSize="16sp"
-        android:textStyle="bold">
-
-    </TextView>
 </RelativeLayout>
