--- a/app/src/main/res/layout/fragment_all_recipes_page.xml
+++ b/app/src/main/res/layout/fragment_all_recipes_page.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,37 +7,53 @@
     android:orientation="vertical"
     tools:context=".allRecipesPage">
 
-    <!-- TODO: Update blank fragment layout -->
-
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:id="@+id/relativeLayoutAllRecipesPage"
+        android:layout_margin="30dp">
 
-        <TextView
-            android:layout_width="167dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:text="All Recipes"
-            android:textSize="30dp"
-            android:textStyle="bold" />
+    <Button
+        android:id="@+id/returnToHomePageButton"
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:backgroundTint="@color/white"
+        android:drawableLeft="@drawable/ic_baseline_black_arrow_back_24"
+        android:fontFamily="@font/poppins_semibold"
+        android:textColor="@color/pastel_red"
+        android:textSize="14sp"
+        tools:ignore="SpeakableTextPresentCheck" />
 
-        <Button
-            android:id="@+id/btnBackAllRecipeToHomePage"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="70dp"
-            android:layout_marginTop="13dp"
-            android:text="Back"></Button>
+    <TextView
+        android:id="@+id/allRecipesText"
+        android:layout_below="@id/returnToHomePageButton"
+        android:layout_width="match_parent"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/poppins_semibold"
+        android:gravity="left"
+        android:text="All Recipes"
+        android:textSize="20sp"
+        android:textColor="@color/black"/>
 
-    </LinearLayout>
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:fillViewport="true"
+    android:layout_below="@id/allRecipesText">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/RecyclerAllrecipe"
         android:layout_width="match_parent"
-        android:layout_height="467dp">
+        android:layout_height="wrap_content">
 
     </androidx.recyclerview.widget.RecyclerView>
+    </ScrollView>
+    </RelativeLayout>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/coordinatorLayout"
@@ -45,13 +61,7 @@
         android:layout_height="100dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:foregroundGravity="bottom"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        tools:context=".MainActivity">
+        android:foregroundGravity="bottom">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/floatingActionButton2"
@@ -85,4 +95,4 @@
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
-</LinearLayout>
+</RelativeLayout>
