--- a/app/src/main/res/layout/fragment_food_details_page.xml
+++ b/app/src/main/res/layout/fragment_food_details_page.xml
@@ -111,7 +111,7 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="75dp">
+                android:layout_height="wrap_content">
 
                 <LinearLayout
                     android:id="@+id/linearLayout6"
@@ -229,13 +229,6 @@
                         android:textSize="16dp" />
                 </LinearLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-            </LinearLayout>
 
             <Button
                 android:id="@+id/frenchToastIngredientsPageButton"
